# CameraTest

./: .gitignore  README.md
AndroidTest/app/: build.gradle
AndroidTest/app/src/main/: AndroidManifest.xml
AndroidTest/app/src/main/java/com/example/androidtest/: FragmentActivity.java  LeftFragment.java  MainActivity.java  MyIntentService.java  MyService.java  RightFragment.java  ThirdFragment.java
AndroidTest/app/src/main/res/layout/: activity_fragment.xml  activity_main.xml  fragment_left.xml  fragment_right.xml  fragment_third.xml
AndroidTest/gradle/wrapper/: gradle-wrapper.properties
CameraTest/app/: local.properties
FirstOpenGLProject/app/: build.gradle
FirstOpenGLProject/app/src/androidTest/java/android/firstopenglproject/com/firstopenglproject/: ExampleInstrumentedTest.java
FirstOpenGLProject/app/src/main/: AndroidManifest.xml
FirstOpenGLProject/app/src/main/java/android/firstopenglproject/com/firstopenglproject/: FirstOpenGLProjectActivity.java  FirstOpenGLProjectRender.java
FirstOpenGLProject/app/src/test/java/android/firstopenglproject/com/firstopenglproject/: ExampleUnitTest.java
FirstOpenGLProject/gradle/wrapper/: gradle-wrapper.properties
GoogleTest/: CMakeLists.txt  build.sh
GoogleTest/core/: CMakeLists.txt  core.cpp
GoogleTest/uttests/: CMakeLists.txt  main.cpp
vs_codeTest/: compiler.md  install.docx
vs_codeTest/vs_code_cpp/: hello.cpp
vs_codeTest/vs_code_java/: hello.java
